--- a/test/fixtures/devices.yml
+++ b/test/fixtures/devices.yml
@@ -3,7 +3,7 @@
 one:
   name: MyString
   tag: 1
-  type: 
+  dev_type: MyString
   make: MyString
   model: MyString
   serial: MyString
@@ -14,7 +14,7 @@ one:
 two:
   name: MyString
   tag: 1
-  type: 
+  dev_type: MyString
   make: MyString
   model: MyString
   serial: MyString
