--- a/test/fixtures/devices.yml
+++ b/test/fixtures/devices.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Device1
   tag: 1
   dev_type: MyString
   make: MyString
@@ -12,8 +12,8 @@ one:
   warranty_type: MyString
 
 two:
-  name: MyString
-  tag: 1
+  name: Device2
+  tag: 2
   dev_type: MyString
   make: MyString
   model: MyString
