--- a/test/fixtures/licences.yml
+++ b/test/fixtures/licences.yml
@@ -8,6 +8,7 @@ one:
   channel: MyString
   purchased_from: MyString
   purchased_on: 2016-11-23
+  in_use: false
 
 two:
   vendor: MyString
@@ -17,3 +18,4 @@ two:
   channel: MyString
   purchased_from: MyString
   purchased_on: 2016-11-23
+  in_use: false
